creación de nueva actividad

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
             android:theme="@style/Theme.Retrofit"
             tools:targetApi="31">
         <activity
+                android:name=".DisplayUserActivity"
+                android:parentActivityName=".MainActivity"
+        />
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+            android:value=".MainActivity"/>
+        <activity
                 android:name=".MainActivity"
                 android:exported="true">
             <intent-filter>
